tests/auto/quickcontrols/controls/data/tst_dialog.qml
@@ -159,6 +159,37 @@ TestCase {
         compare(closedSpy.count, 4)
     }
 
+    function test_destructiveRoleDialogClose() {
+        let control = createTemporaryObject(dialog, testCase)
+        verify(control)
+
+        // Set up the dialog with a DestructiveRole button
+        control.standardButtons = Dialog.Discard
+
+        let discardedSpy = createTemporaryObject(signalSpy, testCase, {target: control, signalName: "discarded"})
+        verify(discardedSpy.valid)
+
+        let closedSpy = createTemporaryObject(signalSpy, testCase, {target: control, signalName: "closed"})
+        verify(closedSpy.valid)
+
+        control.open()
+        verify(control.visible)
+
+        let discardButton = control.standardButton(Dialog.Discard)
+        verify(discardButton)
+        discardButton.clicked()
+
+        // Check that the discarded() signal is emitted
+        compare(discardedSpy.count, 1)
+
+        if (control.visible)
+            control.close()
+
+       // Check that the dialog is closed
+       tryCompare(control, "visible", false)
+       compare(closedSpy.count, 1)
+    }
+
     function test_buttonBox_data() {
         return [
             { tag: "default" },
